# quizmaster-pro

./: .env.example  .env.test  .gitignore  0.0.7  README.md  _start_backend.bat  _start_frontend.bat  package-lock.json  pytest.ini  requirements-dev.txt  requirements.txt  run_testrunner.bat
backend/: .env.development  .env.production  .env.test  Dockerfile  __init__.py  _start_backend.bat  alembic.ini  pyproject.toml  requirements.txt  setup.py
backend/api/flows/sample_poem_flow/: README.md  poem.txt  pyproject.toml
backend/api/flows/sample_poem_flow/src/sample_poem_flow/: __init__.py  main.py
backend/api/flows/sample_poem_flow/src/sample_poem_flow/config/: agents.yaml  tasks.yaml
backend/api/flows/sample_poem_flow/src/sample_poem_flow/crews/poem_crew/: poem_crew.py
backend/api/flows/sample_poem_flow/src/sample_poem_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
docs/: websocket_communication.md
documentation/: BACKEND_ARCHITECTURE.md  BACKEND_ARCHITECTURE_v01.md  ENVIRONMENT_SWITCHING.md  TEST_PLAN_v01.md  TEST_PLAN_v02.md  _design.md  blueprint-generation-flow.md  docker_setup.md  gist.github.come-kondr01-969ae24f2e2f31bd52a81fa5a1fe0f96.md  handy_commands.md  poem_generation_flow.md  running_crewai_from_fastapi.md  setup_guide.md  sqlalchemy_blueprint_generation_issue.md
frontend/: .env.local.development  .env.local.production  _start_frontend.bat  middleware.ts  package-lock.json  package.json  playwright.config.ts  run_auth_test.bat  run_topics_test.bat
scripts/: _backup_code.py  _run_testrunner.sh  _start_backend.bat  _start_frontend.bat  (+12 more)
(+258 files in other folders)
